[package]
name = "dosh"
version = "0.0.1"
authors = ["Gökmen Görgen <gkmngrgn@gmail.com>"]
edition = "2018"
description = "A CLI app to manage your favorite commands"
license = "MIT"

[dependencies]
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
term = "0.6.1"
