[tool.poetry]
name = "dosh_core"
version = "0.1.1"
description = "Shell-independent task manager."
authors = ["Gökmen Görgen <gkmngrgn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
lupa = "^1.14.1"
colorlog = "^6.7.0"
poetry = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-httpserver = "^1.0.6"
pylint = "^2.15.10"
nuitka = "^1.4.8"

[tool.poe.tasks.build]
cmd = "poetry run python -m nuitka app.py --standalone --onefile"
help = "Build dosh with nuitka"

[tool.poe.tasks.lint]
cmd = "pre-commit run --all-files"
help = "Check code quality"

[tool.poe.tasks.test]
cmd = "pytest --no-cov -k $name"
help = "Run tests"

[[tool.poe.tasks.test.args]]
name = "name"
positional = true
default = "test"
help = "Filter tests by $name"

[tool.pytest.ini_options]
addopts = "--cov=dosh --cov-report term-missing --cov-report html:./tests/cov_html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
