[tool.poetry]
name = "dosh-core"
version = "0.2.0"
description = "Shell-independent task manager."
authors = ["Gökmen Görgen <gkmngrgn@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "dosh_core"}]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Build Tools",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
lupa = "^1.14.1"
colorlog = "^6.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-httpserver = "^1.0.6"
pylint = "^2.15.10"

[tool.poe.tasks.lint]
cmd = "pre-commit run --all-files"
help = "Check code quality"

[tool.poe.tasks.test]
cmd = "pytest --no-cov -k $name"
help = "Run tests"

[[tool.poe.tasks.test.args]]
name = "name"
positional = true
default = "test"
help = "Filter tests by $name"

[tool.pytest.ini_options]
addopts = "--cov=dosh_core --cov-report term-missing --cov-report html:./tests/cov_html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
